# forkflux

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
app/: agents.py  config.py  constants.py  exceptions.py  main.py  middleware.py  orchestrator.py  prompts.py  state.py
tests/: conftest.py  test_critic.py  test_generator.py  test_prompts.py
tests/ai/: conftest.py
tests/ai/eval_datasets/: critic_golden_dataset.py  generator_golden_dataset.py
tests/ai/test_suites/: test_critic_suite.py  test_generator_suite.py
